--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -606,6 +606,7 @@ pre code {
 .row {
   display: -ms-flexbox;
   display: flex;
+  flex-direction: column;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -15px;
@@ -646,10 +647,12 @@ pre code {
 }
 
 .col-image{
-  position: absolute;
-  right: 10px;
-  width: 30px;
-  height: 30px;
+  /* position: absolute; */
+  /* right: 10px; */
+  /* width: 30px; */
+  /* height: 30px; */
+  display: flex;
+  /* justify-content: space-between; */
 }
 
 .row-cols-1 > * {
