--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -607,6 +607,7 @@ pre code {
   display: -ms-flexbox;
   display: flex;
   flex-direction: column;
+  -webkit-flex-direction:column;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -15px;
@@ -643,16 +644,10 @@ pre code {
   flex-grow: 1;
   min-width: 0;
   max-width: 100%;
-  position: relative;
 }
 
 .col-image{
-  /* position: absolute; */
-  /* right: 10px; */
-  /* width: 30px; */
-  /* height: 30px; */
   display: flex;
-  /* justify-content: space-between; */
 }
 
 .row-cols-1 > * {
