--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -605,6 +605,7 @@ pre code {
 
 .row {
   display: -ms-flexbox;
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
   display: flex;
   flex-direction: column;
   -webkit-flex-direction:column;
